[project]
name = "matuv-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tangxiangong", email = "tangxiangong@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "matuv_demo._core"
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
